updated index, added vanilla slice blank, completed shepherds pie

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <br>
-            <a href="./recipes/shepherdspie.html"> <h1>Shepherds Pie</h1> </a>
+        <ul>
+            <li><a href="./recipes/shepherdspie.html"> Shepherds Pie </a></li>
+            <li><a href="./recipes/vanillaslice.html"> Vanilla Slice </a></li>
+            <li><a href="./recipes/tbc.html"> TBC </a></li>
+        </ul>
     </body>
 </html>
