--- a/recipes/shepherdspie.html
+++ b/recipes/shepherdspie.html
@@ -6,14 +6,14 @@
 
     <body>
         <h1>Shepherds Pie</h1>
-        <img src="./img/shepherdspie.png">
+        <img src="./img/shepherdspie.png" alt="Shepherds Pie">
         <br>
         <h3>This is a hearty English meal, made with lamb mince, hence the name! Although it is called a pie it doesn't use any pastry 
             and is so cheap, quick and easy to make, you'll enjoy making it! This is a 'larder cupboard' recipe, which means you can 
             substitute for whatever you have handy in the cupboard!
         </h3>
         <br>
-        <h4>Ingredients</h4>
+        <h2>Ingredients</h2>
         <br>
         <ul>
             <li>4 large baking potatoes, peeled and cubed</li>
@@ -29,5 +29,21 @@
             <li>3 tablespoons brown gravy mix (Optional)</li>
             <li>1 (15 ounce) can carrots, drained (Optional)</li>
         </ul>
+        <br>
+        <h2>Steps</h2>
+        <br>
+        <ol>
+            <li>Preheat the oven to 400 degrees F (200 degrees C).</li><br>
+            <li>Place the potatoes into a saucepan and fill with enough water to cover. Bring to a boil, then cook over medium heat 
+                until tender enough to pierce with a fork, about 10 minutes. Drain and mash with butter and milk to your desired 
+                texture.</li><br>
+            <li>Meanwhile, crumble the ground lamb into a large skillet. Cook and stir until no longer pink. Season with 
+                Worcestershire sauce and beef bouillon. Add the mushrooms and onion; continue to cook and stir until tender. 
+                Transfer the contents of the skillet to a large casserole dish.</li><br>
+            <li>Mix the baked beans, diced tomatoes, gravy mix and carrots in with the lamb. Dollop big blobs of mashed potatoes 
+                over the top and carefully spread evenly to cover the entire top. Rake over it with a fork to create a crispy 
+                texture on top when it browns.</li><br>
+            <li>Bake for 10 minutes in the preheated oven, until the top is browned and crisp.</li><br>
+        </ol>
     </body>
 </html>
