Finished the index and pages for the 3 recipes for the first assignment

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/shepherdspie.html"> Shepherds Pie </a></li>
-            <li><a href="./recipes/vanillaslice.html"> Vanilla Slice </a></li>
-            <li><a href="./recipes/tbc.html"> TBC </a></li>
+            <h3><li><a href="./recipes/shepherdspie.html"> Shepherds Pie </a></li></h3>
+            <h3><li><a href="./recipes/vanillaslice.html"> Vanilla Slice </a></li></h3>
+            <h3><li><a href="./recipes/cheeseburger.html"> Cheese Burger </a></li></h3>
         </ul>
     </body>
 </html>
