--- a/recipes/shepherdspie.html
+++ b/recipes/shepherdspie.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Odin Receipes - Shepherds Pie</title>
+        <meta charset "UTF-9">
     </head>
 
     <body>
