--- a/recipes/vanillaslice.html
+++ b/recipes/vanillaslice.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Odin Recipes - Vanilla Slice</title>
+        <meta charset "UTF-8">
     </head>
 
     <body>
         <h1>Vanilla Slice</h1>
         <img src="./img/vanillaslice.png" alt="Vanilla Slice">
         <br>
-        <h3>Description</h3>
+        <h3>Thick and rich custard between puff pastry sheets makes a wonderful snack or dessert.</h3>
         <br>
         <h2>Ingredients</h2>
         <br>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>1 (17.25 ounce) package frozen puff pastry, thawed</li>
+            <li>1 cup white sugar</li>
+            <li>½ cup custard powder</li>
+            <li>¾ cup cornstarch</li>
+            <li>5 ¼ cups milk</li>
+            <li>¼ cup butter</li>
+            <li>2 egg yolks</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1 cup confectioners' sugar</li>
+            <li>1 tablespoon milk</li>
+            <li>1 dash vanilla extract</li>
         </ul>
         <br>
         <h2>Steps</h2>
         <br>
         <ol>
-            <li></li><br>
-            <li></li><br>
-            <li></li><br>
-            <li></li><br>
-            <li></li><br>
+            <li>Preheat the oven to 400 degrees F (200 degrees C). Unfold puff pastry sheets, and place flat onto baking sheets. 
+                Bake for 10 to 15 minutes, or until lightly browned and puffed. Set aside.</li><br>
+            <li>Combine the sugar, custard powder and cornstarch in a large saucepan. Mix in just enough milk to form a paste, 
+                then gradually mix in the rest. This will prevent lumps from forming. Add the butter. Cook over medium heat, 
+                stirring frequently until thick. You may need to use a whisk to ensure a smooth consistency. When the mixture 
+                comes to a simmer, cook stirring constantly for 2 minutes. Remove from the heat, and stir in the egg yolks 
+                and vanilla.</li><br>
+            <li>Line a 9 inch baking dish with aluminum foil. Place one of the baked pastry sheets in the bottom of the dish. 
+                Spread the custard filling in an even layer over the pastry, and top with the other sheet.</li><br>
+            <li>Mix the confectioners' sugar with 1 tablespoon of milk, and a dash of vanilla to make an icing. Spread over 
+                the top of the pastry. Refrigerate until the custard layer is firm. Remove from the pan and slice.</li><br>
         </ol>
     </body>
 </html>
