--- a/recipes/cheeseburger.html
+++ b/recipes/cheeseburger.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Odin Recipe - Cheese Burger</title>
-        <meta charset "UTF-8">
+        <meta charset="UTF-8">
     </head>
 
     <body>
