--- a/recipes/shepherdspie.html
+++ b/recipes/shepherdspie.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Odin Receipes - Shepherds Pie</title>
-        <meta charset "UTF-9">
+        <meta charset="UTF-8">
     </head>
 
     <body>
