--- a/recipes/vanillaslice.html
+++ b/recipes/vanillaslice.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Odin Recipes - Vanilla Slice</title>
-        <meta charset "UTF-8">
+        <meta charset="UTF-8">
     </head>
 
     <body>
