--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <title>Odin Recipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="maintitle">Odin Recipes</div>
         <ul>
-            <h3><li><a href="./recipes/shepherdspie.html"> Shepherds Pie </a></li></h3>
-            <h3><li><a href="./recipes/vanillaslice.html"> Vanilla Slice </a></li></h3>
-            <h3><li><a href="./recipes/cheeseburger.html"> Cheese Burger </a></li></h3>
+            <div class="recipes"><li><a href="./recipes/shepherdspie.html"> Shepherds Pie </a></li></div>
+            <div class="recipes"><li><a href="./recipes/vanillaslice.html"> Vanilla Slice </a></li></div>
+            <div class="recipes"><li><a href="./recipes/cheeseburger.html"> Cheese Burger </a></li></div>
         </ul>
     </body>
 </html>
